# arbre-go

./: Arbre-Go.cabal
Arbre/: Compile.hs  Context.hs  Event.hs  Expressions.hs  Mutation.hs  Native.hs  Receiver.hs  Short.hs
lib/: arbre.go  expression.go  input.go  native.go  output.go  plan.go
src/arbre/: arbre.go  test_literal.go
